--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="https://newdestiny.in">
+    <meta name="author" content="https://newdestiny.in" />
     <title>New Destiny</title>
-    
+
     <link rel="shortcut icon" href="favicon.ico" type = "image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/flipclock.css">
     <link rel="stylesheet" media="all" href="css/style.css">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/dbc5c60f69.js" crossorigin="anonymous"></script>
     <script src="js/flipclock.js"></script>
+
   </head>
   <body>
 
@@ -26,7 +27,7 @@
     <div id="hero">
 
       <video loop="" muted="" autoplay="" poster="">
-        <source src="img/bg_video.mp4" type="video/mp4">
+        <source src="img/bg_video.mp4?rel=0&autoplay=1" type="video/mp4">
       </video>
 
       <div class="content d-flex p-2 bd-highlight align-items-center">
