--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="hero">
 
       <video loop="" muted="" autoplay="" poster="">
-        <source src="img/bg_video.mp4?rel=0&autoplay=1" type="video/mp4">
+        <source src="img/bg_video.mp4" type="video/mp4">
       </video>
 
       <div class="content d-flex p-2 bd-highlight align-items-center">
