--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="container text-center">
           <h2 class="text-success">Welcome to </h2>
           <h1>New Destiny Technologies</h1>
+            <p>Coming Soon</p>
           <div class="d-flex flex-row bd-highlight mb-3 justify-content-around">
             <div class="mx-auto text-center p-2 bd-highlight">
               <div class="clock"></div>
