--- a/index.html
+++ b/index.html
@@ -26,15 +26,28 @@
 
     <div id="hero">
 
-      <video loop="" muted="" autoplay="" poster="">
+      <!--<video loop="" muted="" autoplay="" poster="">
         <source src="img/bg_video.mp4" type="video/mp4">
       </video>
+      -->
 
       <div class="content d-flex p-2 bd-highlight align-items-center">
         <div class="container text-center">
           <h2 class="text-success">Welcome to </h2>
           <h1>New Destiny Technologies</h1>
-            <p>Coming Soon</p>
+                <svg viewBox="0 0 960 300">
+                <symbol id="s-text">
+                    <text text-anchor="middle" x="50%" y="80%">Coming Soon </text>
+                </symbol>
+
+               <g class = "g-ants">
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+               </g>
+              </svg>
           <div class="d-flex flex-row bd-highlight mb-3 justify-content-around">
             <div class="mx-auto text-center p-2 bd-highlight">
               <div class="clock"></div>
