--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3 class="navbar-right text-danger"><p>Under Construction...</p></h3>
     </nav>
 
-    <div id="hero">
+    <div id="hero" class="bg">
 
       <!--<video loop="" muted="" autoplay="" poster="">
         <source src="img/bg_video.mp4" type="video/mp4">
